# adlib

./: adlib.cabal
src/: Main.hs
